fix(layout): fixes layout problems caused by two layouts

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,47 @@
+/* Main css styles */
+* {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+}
+
+html {
+  font-family: 'Montserrat', sans-serif;
+  /* This means for sizes under 576px the body font size will be 10px */
+  font-size: 10px;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+@media (min-width: 576px) {
+  html {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 992px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1200px) {
+  html {
+    font-size: 16px;
+  }
+}
+/* End of reset stuff */
+
 .swiper-pagination-bullet {
   height: 12px;
   width: 12px;
